[refactor] Collapse component [fix] Resizing bug of NavBar "direction" property

--- a/source/Navigator/NavBar.less
+++ b/source/Navigator/NavBar.less
@@ -18,7 +18,7 @@
             overflow-y: auto;
             visibility: hidden;
             transition: transform 0.3s ease-in-out, visibility 0.3s ease-in-out;
-            .open {
+            &.open {
                 visibility: visible;
                 transform: translateX(-100%);
             }
